--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -15,7 +15,7 @@ jobs:
             base: './openapi.yaml'
             revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test1.yaml
             # revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test3.yaml
-            fail-on-diff: true
+            # fail-on-diff: true
           attempt_limit: 3
           attempt_delay: 2000
       # - uses: oasdiff/oasdiff-action/breaking@main
