--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -7,20 +7,31 @@ jobs:
   success :
     runs-on : ubuntu-latest
     steps :
-      - uses: actions/checkout@v4
-      - uses: Wandalen/wretry.action@master
-        with:
-          action: oasdiff/oasdiff-action/breaking@main
-          with: |
-            base: './openapi.yaml'
-            revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test1.yaml
-            # revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test3.yaml
-            # fail-on-diff: true
-          attempt_limit: 3
-          attempt_delay: 2000
+      # - uses: actions/checkout@v4
+      # - uses: Wandalen/wretry.action@master
+      #   with:
+      #     action: oasdiff/oasdiff-action/breaking@main
+      #     with: |
+      #       base: './openapi.yaml'
+      #       revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test1.yaml
+      #       # revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test3.yaml
+      #       # fail-on-diff: true
+      #     attempt_limit: 3
+      #     attempt_delay: 2000
       # - uses: oasdiff/oasdiff-action/breaking@main
       #   with:
       #     base: './openapi.yaml'
       #     revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test1.yaml
       #     fail-on-diff: true
       # - run: git clone https://oauth2:${{ secrets.PRIVATE_TOKEN }}@github.com/dmvict/test.action.private.git
+
+      - uses: Wandalen/wretry.action@master
+        id: test
+        with:
+          action: dmvict/test.action@docker
+          with: |
+            string: 'foo bar baz'
+            bool-like: false
+          attempt_limit: 3
+          attempt_delay: 2000
+      - run: echo ${{ steps.test.outputs }}
