--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -25,7 +25,7 @@ jobs:
       #     fail-on-diff: true
       # - run: git clone https://oauth2:${{ secrets.PRIVATE_TOKEN }}@github.com/dmvict/test.action.private.git
 
-      - uses: Wandalen/wretry.action@master
+      - uses: dmvict/wretry.action@alt
         id: test
         with:
           action: dmvict/test.action@docker
