--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -25,13 +25,18 @@ jobs:
       #     fail-on-diff: true
       # - run: git clone https://oauth2:${{ secrets.PRIVATE_TOKEN }}@github.com/dmvict/test.action.private.git
 
-      - uses: dmvict/wretry.action@alt
+      # - uses: dmvict/wretry.action@alt
+      #   id: test
+      #   with:
+      #     action: dmvict/test.action@docker
+      #     with: |
+      #       string: 'foo bar baz'
+      #       # bool-like: false
+      #     attempt_limit: 3
+      #     attempt_delay: 2000
+      - uses: dmvict/test.action@docker
         id: test
-        with:
-          action: dmvict/test.action@docker
-          with: |
-            string: 'foo bar baz'
-            # bool-like: false
-          attempt_limit: 3
-          attempt_delay: 2000
-      - run: echo -en ${{ toJSON( steps.test.outputs ) }}
+        with: |
+          string: 'foo bar baz'
+          # bool-like: false
+      - run: echo -en "${{ toJSON( steps.test.outputs ) }}"
