--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -36,7 +36,7 @@ jobs:
       #     attempt_delay: 2000
       - uses: dmvict/test.action@docker
         id: test
-        with: |
+        with:
           string: 'foo bar baz'
           # bool-like: false
       - run: echo -en "${{ toJSON( steps.test.outputs ) }}"
