--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -38,5 +38,5 @@ jobs:
         id: test
         with:
           string: 'foo bar baz'
-          # bool-like: false
+          bool-like: false
       - run: echo -en "${{ toJSON( steps.test.outputs ) }}"
