--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -17,6 +17,7 @@ jobs:
             fail-on-diff: true
             include-checks: api-operation-id-removed
             deprecation-days-beta: 90
+            deprecation-days-stable: 90
           attempt_limit: 3
           attempt_delay: 2000
 
