--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -18,6 +18,7 @@ jobs:
             include-checks: api-operation-id-removed
             deprecation-days-beta: 90
             deprecation-days-stable: 90
+            exclude-elements: title
           attempt_limit: 3
           attempt_delay: 2000
 
