oasdiff with defaults and diffs

--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -12,13 +12,13 @@ jobs:
           action: oasdiff/oasdiff-action/breaking@main
           with: |
             base: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test1.yaml
-            revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test1.yaml
-            # revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test3.yaml
-            fail-on-diff: true
-            include-checks: api-operation-id-removed
-            deprecation-days-beta: 90
-            deprecation-days-stable: 90
-            exclude-elements: title
+            # revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test1.yaml
+            revision: https://raw.githubusercontent.com/Tufin/oasdiff/main/data/openapi-test3.yaml
+            # fail-on-diff: true
+            # include-checks: api-operation-id-removed
+            # deprecation-days-beta: 90
+            # deprecation-days-stable: 90
+            # exclude-elements: title
           attempt_limit: 3
           attempt_delay: 2000
 
