--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -11,5 +11,6 @@ jobs:
         with:
           action: dmvict/test.action.private@master
           with: |
+          github_token: ${{ secrets.PRIVATE_GITHUB_TOKEN }}
           attempt_limit: 3
           attempt_delay: 2000
