--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -9,8 +9,8 @@ jobs:
     steps :
       - uses: dmvict/wretry.action@alt
         with:
-          action: dmvict/test.action.private@master
+          action: dmvict/test.action@conditions
           with: |
-          github_token: ${{ secrets.PRIVATE_GITHUB_TOKEN }}
+            value: 0
           attempt_limit: 3
           attempt_delay: 2000
