--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -7,6 +7,7 @@ jobs:
   success :
     runs-on : ubuntu-latest
     steps :
+      - run: exit 1
       - uses: dmvict/wretry.action@alt
         with:
           action: dmvict/test.action@conditions
