--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -9,7 +9,7 @@ jobs:
     steps :
       - uses: dmvict/wretry.action@alt
         env:
-          TEST: false
+          TEST: true
         with:
           action: dmvict/test.action@conditions
           with: |
