--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -9,10 +9,12 @@ jobs:
     steps :
       # - uses: Wandalen/wretry.action@v3
       - uses: dmvict/wretry.action@alt
+        env:
+          TEST: 'false'
         with:
-          retry_condition: github.event_name == 'pull'
-          action: dmvict/test.action@v0.0.2
+          action: dmvict/test.action@docker_conditions
           with: |
-            value: 0
+            string: foo
+            bool-like: false
           attempt_limit: 4
           attempt_delay: 3000
