--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -10,7 +10,7 @@ jobs:
       # - uses: Wandalen/wretry.action@v3
       - uses: dmvict/wretry.action@alt
         env:
-          TEST: 'false'
+          TEST: 'true'
         with:
           action: dmvict/test.action@docker_conditions
           with: |
