--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -9,11 +9,9 @@ jobs:
     steps :
       # - uses: Wandalen/wretry.action@v3
       - uses: dmvict/wretry.action@alt_conditions
-        env:
-          TEST: 'false'
         with:
           action: dmvict/test.action@docker_conditions
-          pre: false
+          branch: js_action_alt
           with: |
             string: -al
             bool-like: /
