--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -29,4 +29,5 @@ jobs:
             bool-like: /
           attempt_limit: 4
           attempt_delay: 3000
-      - run: echo "${{ fromJSON( steps.main.outputs.outputs ) }}"
+      - run: echo -n "${{ fromJSON( steps.main.outputs.outputs ) }}"
+      - run: echo -n "${{ fromJSON( steps.main.outputs.outputs.string ) }}"
