--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -28,5 +28,6 @@ jobs:
             bool-like: /
           attempt_limit: 4
           attempt_delay: 3000
-      - run: echo -n "${{ fromJSON( steps.main.outputs ).outputs }}"
+      - name: command
+        run: echo -n "${{ fromJSON( steps.main.outputs ).outputs }}"
       # - run: echo -n "${{ fromJSON( steps.main.outputs ).string }}"
