--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -29,5 +29,5 @@ jobs:
           attempt_limit: 4
           attempt_delay: 3000
       - name: command
-        run: echo -en "${{ fromJSON( steps.mmmm.outputs ) }}"
+        run: echo -en "${{ fromJSON( steps.mmmm.outputs.outputs ) }}"
       # - run: echo -n "${{ fromJSON( steps.main.outputs ).string }}"
