--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -30,4 +30,6 @@ jobs:
           attempt_delay: 3000
       - name: command
         run: echo -en "${{ fromJSON( steps.mmmm.outputs.outputs ) }}"
+      - name: command2
+        run: echo -en "${{ fromJSON( steps.mmmm.outputs.outputs ).string }}"
       # - run: echo -n "${{ fromJSON( steps.main.outputs ).string }}"
