--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -18,11 +18,13 @@ jobs:
       #       bool-like: /
       #     attempt_limit: 4
       #     attempt_delay: 3000
+      - run: echo 'foo=bar' >> $GITHUB_OUTPUT
+        id: foo
       - name: main
         id: mmmm
         uses: Wandalen/wretry.action/main@master
         with:
-          retry_condition: fromJSON( steps.mmmm.outputs.outputs ).string == 'foo'
+          retry_condition: steps.foo.outputs.foo == 'bar'
           action: dmvict/test.action@alt
           # with: |
           #   string: -al
