--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -20,6 +20,8 @@ jobs:
       #     attempt_delay: 3000
       - run: echo 'foo=bar' >> $GITHUB_OUTPUT
         id: foo
+      - name: command
+        run: echo -en "${{ steps.foo.outputs.foo }}"
       - name: main
         id: mmmm
         uses: Wandalen/wretry.action/main@master
