--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -50,9 +50,10 @@ jobs:
           node-version : ${{ matrix.node-version }}
         attempt_limit : 3
         attempt_delay: 1000
-    - name : Install willbe
-      uses : Wandalen/wretry.action@master
-      with :
-        command : npm i -g willbe@latest
-        attempt_limit : 3
-        attempt_delay: 1000
+    - run: npm i -g willbe@latest
+    # - name : Install willbe
+    #   uses : Wandalen/wretry.action@master
+    #   with :
+    #     command : npm i -g willbe@latest
+    #     attempt_limit : 3
+    #     attempt_delay: 1000
