--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -39,7 +39,7 @@ jobs:
       fail-fast : false
       matrix :
         os : [ windows-latest ]
-        node-version : [ 18.x, 20.x ]
+        node-version : [ 16.x ]
     runs-on : ${{ matrix.os }}
     steps :
     - name : ${{ matrix.node-version }}
