--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -5,7 +5,7 @@ on : push
 
 jobs:
   success :
-    runs-on : windows-latest
+    runs-on : ubuntu-latest
     steps :
       # - uses: Wandalen/wretry.action@v3
       # - name: pre
@@ -34,8 +34,12 @@ jobs:
         id: mmmm
         uses: dmvict/wretry.action@alt
         with:
-          retry_condition: steps._this.outputs.string == 'foo'
-          action: dmvict/test.action@alt
+          retry_condition: contains( steps._this.outputs.foo, 'foo' )
+          # action: dmvict/test.action@alt
+          command: |
+            date=$(date)
+            echo "foo=foo$date" >> $GITHUB_OUTPUT
+            exit 0
           steps_context: ${{ toJSON( steps )}}
           attempt_limit: 4
           attempt_delay: 3000
