--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -10,16 +10,16 @@ jobs:
       - name: main
         uses: Wandalen/wretry.action@master
         with:
-          command: |
-            echo -en "${{ join(secrets.MULTILINE, '\n')}}"
-          # action: dmvict/test.action@alt
-          # with: |
-          #   multiline: |
-          #     ${{ secrets.MULTILINE }}
-          #   singleline: single
-          #   true_v: true
-          # attempt_limit: 4
-          # attempt_delay: 3000
+          # command: |
+          #   echo -en "${{ join(secrets.MULTILINE, '\n')}}"
+          action: dmvict/test.action@alt
+          with: |
+            multiline: |
+              ${{ join(secrets.MULTILINE, '\n')}}
+            singleline: single
+            true_v: true
+          attempt_limit: 4
+          attempt_delay: 3000
       # - name: command
       #   run: echo -en "${{ toJSON( steps.mmmm.outputs ) }}"
 
