--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -15,7 +15,7 @@ jobs:
           action: dmvict/test.action@alt
           with: |
             multiline: |
-              ${{ toJSON(secrets.MULTILINE, '\n')}}
+              ${{ toJSON(secrets.MULTILINE)}}
             singleline: single
             true_v: true
           attempt_limit: 4
