--- a/.github/workflows/Push1.yml
+++ b/.github/workflows/Push1.yml
@@ -13,5 +13,6 @@ jobs:
           action: dmvict/test.action@post_without_default_input
           with: |
             value: 0
+            post_value: 1
           attempt_limit: 4
           attempt_delay: 10000
